apps/base/ollama/postgres-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: ollama
    component: database
spec:
  replicas: 1
  serviceName: postgres
  selector:
    matchLabels:
      app: ollama
      component: database
  template:
    metadata:
      labels:
        app: ollama
        component: database
    spec:
      nodeName: miniserver
      volumes:
        - name: ollama-postgres
          persistentVolumeClaim:
            claimName: ollama-postgres
      containers:
      - name: postgres
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: ollama-postgres
          mountPath: /var/lib/postgresql/data
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "1"
