apps/base/ollama/webui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  labels:
    app: ollama
    component: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
      component: webui
  template:
    metadata:
      labels:
        app: ollama
        component: webui
    spec:
      nodeName: miniserver
      #affinity:
      #  podAntiAffinity:
      #    requiredDuringSchedulingIgnoredDuringExecution:
      #      - labelSelector:
      #          matchLabels:
      #            app: ollama
      #            component: server
      #        topologyKey: "kubernetes.io/hostname"
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:latest
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: webui-files
          mountPath: /app/backend/data/uploads
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "2Gi"
            cpu: "1"
      volumes:
      - name: webui-files
        persistentVolumeClaim:
          claimName: open-webui-data
