apps/base/ollama/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  labels:
    app: ollama
    component: server
spec:
  type: ClusterIP
  selector:
    app: ollama
    component: server
  ports:
  - name: http
    port: 11434
    targetPort: 11434
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  labels:
    app: ollama
    component: webui
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 86400
  selector:
    app: ollama
    component: webui
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: ollama
    component: database
spec:
  type: ClusterIP
  selector:
    app: ollama
    component: database
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
